--- a/src/app/components/animal/animal.component.html
+++ b/src/app/components/animal/animal.component.html
@@ -30,6 +30,8 @@
                     <th scope="col">Edad</th>
                     <th scope="col">Tipo</th>
                     <th scope="col">Fecha</th>
+                    <th scope="col">Editar</th>
+                    <th scope="col">Eliminar</th>
                 </tr>
             </thead>
             <tbody>
@@ -38,10 +40,39 @@
                     <td>{{item.edad}}</td>
                     <td>{{item.tipo}}</td>
                     <td>{{item.fecha}}</td>
+                    <td><button type="button" class="btn btn-primary" (click)="toggleEditAnimal(item._id)">
+                            <i class="bi bi-pencil-square"></i>
+                        </button></td>
+                    <td><button type="button" class="btn btn-primary" (click)="deleteAnimalEntry(item._id)">
+                             <i class="bi bi-trash"></i>
+                            </button></td>
                 </tr>
         </table>
     </div>
     <!--TERMINA TABLA-->
+    <form *ngIf="editableAnimal" class="card p-2" (ngSubmit)="updateAnimalEntry()" [formGroup]="animalForm">
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp"
+                placeholder="Nombre del animal" formControlName="nombre">
+        </div>
+        <div class="mb-3">
+            <label for="edad" class="form-label">Edad</label>
+            <input type="number" class="form-control" id="edad" placeholder="Edad animal" formControlName="edad">
+        </div>
+        <div class="mb-3">
+            <label for="tipo" class="form-label">Tipo</label>
+            <input type="text" class="form-control" id="tipo" placeholder="Tipo de animal" formControlName="tipo">
+        </div>
+        <div class="mb-3">
+            <label for="fecha" class="form-label">Fecha</label>
+            <input type="date" class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha">
+        </div>
+        <div class="input-group justify-content-center md-12">
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Guardar</button>
+        </div>
+    </form>
+
     <!-- Modal New Animal-->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
